Renamed solution, namespaces, main project and its usages.

--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -16,7 +16,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\Lib.SqlQueryBuilder\Lib.SqlQueryBuilder.csproj" />
+      <ProjectReference Include="..\SqlFluentBuilder\SqlFluentBuilder.csproj" />
     </ItemGroup>
 
 </Project>
