--- a/SqlFluentBuilder/SqlFluentBuilder.csproj
+++ b/SqlFluentBuilder/SqlFluentBuilder.csproj
@@ -6,6 +6,17 @@
         <Nullable>enable</Nullable>
         <RootNamespace>SqlFluentBuilder</RootNamespace>
         <AssemblyName>SqlFluentBuilder</AssemblyName>
+        <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+        <Authors>Johnvanazzi</Authors>
+        <Description>This is a SQL string builder containing methods allowing you to write your SQL query in a fluent manner within your code.</Description>
+        <Copyright>Copyright 2022 Johnvanazzi.</Copyright>
+        <PackageProjectUrl>https://github.com/Johnvanazzi/sql-fluent-builder</PackageProjectUrl>
+        <RepositoryUrl>https://github.com/Johnvanazzi/sql-fluent-builder</RepositoryUrl>
+        <RepositoryType>git</RepositoryType>
+        <PackageTags>sql sql-builder fluent sql-fluent-builder query-builder query</PackageTags>
+        <PackageReleaseNotes>This is the first release of the package containing all possible SQL commands and clauses that you can use for writing SQL queries fluently in C#.</PackageReleaseNotes>
+        <PackageLicenseUrl>https://github.com/Johnvanazzi/sql-fluent-builder/LICENSE.txt</PackageLicenseUrl>
+        <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
     </PropertyGroup>
 
 </Project>
